# infomaniak

./: Cargo.toml  flake.nix
src/: client.rs  error.rs
src/api/: llm.rs
