[package]
name = "infomaniak-api"
version = "0.1.0"
authors = ["milan <milan@milan.wtf>"]
edition = "2021"
description = "Rust client for the Infomaniak API."
repository = "https://github.com/m-vz/infomaniak-api"
license = "MIT OR Apache-2.0"
keywords = ["api", "client"]
categories = ["api-bindings", "authentication", "config"]

[dependencies]
