[package]
name = "infomaniak"
version = "0.1.0"
authors = ["milan <milan@milan.wtf>"]
edition = "2021"
description = "Rust client for the Infomaniak API."
repository = "https://github.com/m-vz/infomaniak-api"
license = "MIT OR Apache-2.0"
keywords = ["api", "client"]
categories = ["api-bindings", "authentication", "config"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
httpmock = "0.7"
serde_json = "1.0"
